[package]
name = "fga"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
bopolyri = {path="../bopolyri"}
m4ri-rust = {path="../m4ri-rust/m4ri-rust/"}
rand= "0.8.3"
fixedbitset = "0.3.2"
